@@ -75,8 +75,11 @@ function(x, y,
     xorig <- x
     x <- as.numeric(x)
     if(!is.factor(y)) stop("dependent variable should be a factor")
-    if(!is.null(ylevels))
-      y <- factor(y, levels = if(is.numeric(ylevels)) levels(y)[ylevels] else ylevels)
+
+    ## reverse ordering on y-axis compared to R < 4.0.0
+    ylevels <- if(is.null(ylevels)) nlevels(y):1L else rev(ylevels)
+    y <- factor(y, levels = if(is.numeric(ylevels)) levels(y)[ylevels] else ylevels)
+    yaxlabels <- yaxlabels[ylevels]
 
     ## unconditional density of x
     dx <- if(is.null(from) & is.null(to))
